--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,6 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    background-color: var(--background-color);
     color: var(--textgray-color);
 }
 
@@ -31,27 +30,29 @@ body {
 
 /* HEADER / NAV BAR STYLES START */
 
-.header {
+header {
     padding: 20px 35 px;
     display: flex;
-    justify-content: space-between;
     flex-wrap: wrap;
-    position: -webkit-sticky;
-    position: sticky;
+    /* position: -webkit-sticky;
+    position: sticky; */
     top: 0;
     background-color: var(--headergray-color);
+    justify-content: space-between;
     z-index: 9999;
 }
 
-.header h1 {
+header h1 {
     font-weight: bold;
-    margin: 0;
+    margin: 10px 0;
     font-size: 36px;
+    padding: 0 5px 0 35px;
     background-color: var(--surfgreen-color);
     color: var(--textgray-color);
+    display: inline;
 }
 
-.header nav {
+header nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -60,36 +61,30 @@ body {
     background-color: var(--headergray-color);
 }
 
-.header nav ul li {
+header nav ul li {
     display: inline-block;
     margin-left: 25px;
     flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: right;
     list-style: none;
-    background-color: var(--headergray-color);
 }
 
-.header nav ul li a {
-    padding: 10px 15 px;
-    font-weight: lighter;
-    font-size: 1.55vw;
+header nav ul li a {
+    padding: 10px 15px;
+    font-size: 15px;
+    /* font-size: 1.55vw; */
     color: var(--surfgreen-color);
     background-color: var(--headergray-color);
 }
 
 /* HEADER / NAVBAR STYLES END */
 
-/* STYLE ALL SECTION TAGS */
-section {
-    padding: 60px;
-}
-
-/* Hero Style Start */
+/* HERO STYLE START */
 .hero {
+    position: relative;
     background-image: url("../images/ocean-banner-public-domain.jpg");
     background-size: cover;
     background-position: center;
+    height: 300px;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
@@ -99,18 +94,25 @@ section {
 }
 
 .hero h3 {
-    display: inline-block;
-    margin-left: 25px;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: right;
-    list-style: none;
-    background-color: transparent;
+    position: absolute;
+    right: 15px;
+    bottom: 5px;
+    background-color: var(--surfgreen-color);
+    padding: 5px 5px;
 }
 
-/* Hero Style End */
+/* HERO STYLE END */
 
-/* SECTION TITLE STYLES START */
+/* MAIN BODY STYLES START */
+
+.main-body {
+    background-color: var(--background-color);
+}
+
+section {
+    padding: 60px;
+}
+
 .section-title {
     font-size: 48px;
     border-bottom: 3px solid;
@@ -142,8 +144,6 @@ section {
 
 /* CONTACT ME STYLES END */
 
-/
-
 /* specific match */
 .service-grid-item.basic {
     grid-column: 2 / span 1;
@@ -166,9 +166,19 @@ section {
 /* SERVICE PLANS END */
 
   /* REACH OUT STYLES START */
-.contact {
+.contact div ul {    
 
+    padding-top: 15px;
+    margin-right: 20px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 20px;
+    display: inline;
+}
 
+.contact div ul li {
+    justify-content: space-between;
+    display: inline-block;
+}
 
 /* REACH OUT STYLES END */
 
@@ -223,14 +233,6 @@ section {
       }
       .section-title {
         width: 80%;
-      }
-      
-      .trainer {
-        flex: 0 70%;
-      }
-      
-      .contact-info iframe{
-        flex: 1 100%;
       }
   }
   
