--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,29 +49,31 @@ header h1 {
     padding: 0 5px 0 35px;
     background-color: var(--surfgreen-color);
     color: var(--textgray-color);
-    display: inline;
+    /* display: inline; */
 }
 
 header nav {
     padding-top: 15px;
     margin-right: 20px;
-    float: right;
+    /* float: right; */
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
     background-color: var(--headergray-color);
 }
-
+/* why does this no longer work when I remove "in-line" and make it flex? */
 header nav ul li {
-    display: inline-block;
-    margin-left: 25px;
+    display: flex;
     flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+    /* margin-left: 25px; */
     list-style: none;
 }
 
 header nav ul li a {
     padding: 10px 15px;
-    font-size: 15px;
-    /* font-size: 1.55vw; */
+    /* font-size: 15px; */
+    font-size: 1.40vw;
     color: var(--surfgreen-color);
     background-color: var(--headergray-color);
 }
@@ -144,7 +146,8 @@ section {
 
 /* CONTACT ME STYLES START */
 .contact {
-  display: inline-block;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .contact div ul {    
@@ -159,8 +162,9 @@ section {
 }
 
 .contact div ul li {
-    justify-content: space-between;
+    justify-content: space-around;
     display: inline-block;
+    text-decoration: underline;
 }
 /* CONTACT ME STYLES END */
 /* MAIN BODY STYLES END */
