--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,8 +6,8 @@
     --headergray-color: #43464a;
     --background-color: #e4edf7;
 }
-/* GLOBAL DEFINITIONS */
 
+/* GLOBAL DEFINITIONS */
 * {
     box-sizing: border-box;
     margin: 0;
@@ -15,21 +15,20 @@
     color: var(--textgray-color);
 }
 
-.float-left {
+/* .float-left {
     float: left;
     margin-right: 25px;
 }
 .float-right {
     float: right;
     margin-left: 25px;
-}
+} */
 
 body {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-  }
+}
 
 /* HEADER / NAV BAR STYLES START */
-
 header {
     padding: 20px 35 px;
     display: flex;
@@ -77,7 +76,6 @@ header nav ul li a {
     color: var(--surfgreen-color);
     background-color: var(--headergray-color);
 }
-
 /* HEADER / NAVBAR STYLES END */
 
 /* HERO STYLE START */
@@ -102,17 +100,19 @@ header nav ul li a {
     background-color: var(--surfgreen-color);
     padding: 5px 5px;
 }
-
 /* HERO STYLE END */
 
 /* MAIN BODY STYLES START */
-
 .main-body {
     background-color: var(--background-color);
 }
 
 section {
     padding: 60px;
+}
+
+.flex-row {
+  display: flex;
 }
 
 .main-body h2 {
@@ -123,6 +123,7 @@ section {
   border-color: var(--textgray-color); */
   display: inline-block;
   vertical-align: top;
+  flex-basis: 15%;
 }
 
 /* ABOUT ME STYLES */
@@ -136,11 +137,34 @@ section {
   border-color: var(--textgray-color);
 }
 /* ABOUT ME STYLES END */
+
 /* WORK STYLES START */
 
-.past-works {
-  /* placeholder for pastworks */
+.pastprojects {
+  margin: 50px auto;
+  padding-bottom: 50px;
+  width: 80%;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+  border-left: 3px solid;
+  border-color: var(--textgray-color);
 }
+
+.project-img {
+  flex: 1 12%;
+  margin-right: 20px;
+  max-width: 100%;
+  height: 20px;
+  width: 40px;
+}
+
+/* .pastworks {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+} */
 
 /* WORK STYLES END */
 
@@ -155,18 +179,28 @@ section {
     padding: 10px 20px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
-    display: inline;
+    /* display: inline; */
     border-left: 3px solid;
     border-color: var(--textgray-color);
 
 }
 
+/* Why does this not work when I remove "inline-block"? */
 .contact div ul li {
     justify-content: space-around;
-    display: inline-block;
+    /* display: inline-block; */
     text-decoration: underline;
+    list-style: none;
 }
+
+.contact div ul li a {
+  padding: 10px 15px;
+  /* font-size: 15px; */
+  font-size: 1.40vw;
+}
+
 /* CONTACT ME STYLES END */
+
 /* MAIN BODY STYLES END */
 
 /* UTILITIES */
@@ -177,10 +211,6 @@ section {
 
 .text-right {
     text-align: right;
-}
-
-.flex-row {
-    display: flex;
 }
 
 /* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER */
