--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,16 +13,24 @@
     margin: 0;
     padding: 0;
     color: var(--textgray-color);
+    scroll-behavior: smooth;
 }
 
-/* .float-left {
+.left-margin-line {
+  padding: 10px 20px;
+  border-left: 3px solid;
+  border-color: var(--textgray-color);
+  width: 80%;
+}
+
+.float-left {
     float: left;
     margin-right: 25px;
 }
 .float-right {
     float: right;
     margin-left: 25px;
-} */
+}
 
 body {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -33,8 +41,6 @@ header {
     padding: 20px 35 px;
     display: flex;
     flex-wrap: wrap;
-    /* position: -webkit-sticky;
-    position: sticky; */
     top: 0;
     background-color: var(--headergray-color);
     justify-content: space-between;
@@ -48,24 +54,25 @@ header h1 {
     padding: 0 5px 0 35px;
     background-color: var(--surfgreen-color);
     color: var(--textgray-color);
-    /* display: inline; */
+    display: inline;
 }
 
 header nav {
     padding-top: 15px;
     margin-right: 20px;
-    /* float: right; */
+    float: right;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
     background-color: var(--headergray-color);
 }
-/* why does this no longer work when I remove "in-line" and make it flex? */
+
 header nav ul li {
-    display: flex;
+    /* display: flex;
     flex-wrap: wrap;
-    align-items: center;
-    justify-content: space-between;
-    /* margin-left: 25px; */
+    align-items: center; */
+    /* justify-content: space-between; */
+    display: inline-block;
+    margin-left: 25px;
     list-style: none;
 }
 
@@ -138,57 +145,111 @@ section {
 }
 /* ABOUT ME STYLES END */
 
-/* WORK STYLES START */
+/* SAMPLE PAST PROJECTS STYLES START */
+.projects-grid-container {
+  display: grid;
+  grid-template-columns: repeat(3, 300px);
+  grid-template-rows: repeat(3 150px);
+  grid-gap: 10px;
+}
 
-.pastprojects {
-  margin: 50px auto;
-  padding-bottom: 50px;
-  width: 80%;
-  display: flex;
-  flex-wrap: wrap;
+.projects-grid-container div {
   align-items: center;
-  justify-content: space-between;
-  border-left: 3px solid;
-  border-color: var(--textgray-color);
+  pointer-events: auto;
 }
 
-.project-img {
-  flex: 1 12%;
-  margin-right: 20px;
-  max-width: 100%;
-  height: 20px;
-  width: 40px;
+.project-grid-item {
+  width: 300px;
+  height: 150px;
+  border: solid var(--surfgreen-color);
+  position: relative;
+  opacity: 0.3;
 }
 
-/* .pastworks {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-} */
+.project-grid-item:hover {
+  opacity: 0.9;
+  transition-duration: 1s;
+}
 
-/* WORK STYLES END */
+#run-buddy {
+  background-image: url("../images/Run-Buddy.png");
+  width: 600px;
+  height: 300px;
+  grid-column-start: 1;
+  grid-column-end: 3;
+  grid-row-start: 1;
+  grid-row-end: 3;
+  border: solid var(--surfgreen-color);
+  background-color: var(--surfgreen-color);
+  position: relative;
+  opacity: 0.3;
+}
+
+#run-buddy a {
+  text-decoration: none;
+  grid-column-start: 1;
+  grid-column-end: 3;
+  grid-row-start: 1;
+  grid-row-end: 3;
+  width: 600px;
+  height: 300px;
+}
+
+#run-buddy:hover {
+  opacity: 0.9;
+  transition-duration: 1s;
+}
+
+#horiseon {
+  background-image: url("../images/horiseon.png");
+}
+
+#horiseon a {
+  text-decoration: none;
+  /* grid-column-start: 3;
+  grid-column-end: 4;
+  grid-row-start: 1;
+  grid-row-end: 2; */
+}
+
+#robot-gladiator {
+  background-image: url("../images/robot-gladiators-2.png");
+}
+
+#taskinator {
+  background-image: url("../images/taskinator.jpg");
+}
+
+#pw-generator {
+  background-image: url("../images/password-generator.png");
+}
+
+.project-name {
+  background-color: var(--surfgreen-color);
+  padding: 0;
+  margin: 0;
+  font-weight: bold;
+  position: absolute;
+  bottom: 5px;
+  left: 0;
+  font-size: 20px;
+  padding: 5px;
+  opacity: 1;
+}
+/* SAMPLE PAST PROJECTS STYLES END */
 
 /* CONTACT ME STYLES START */
-.contact {
-  display: flex;
-  flex-wrap: wrap;
-}
-
 .contact div ul {    
 
     padding: 10px 20px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
-    /* display: inline; */
-    border-left: 3px solid;
-    border-color: var(--textgray-color);
-
+    display: inline;
 }
 
-/* Why does this not work when I remove "inline-block"? */
 .contact div ul li {
     justify-content: space-around;
-    /* display: inline-block; */
+    display: inline-block;
     text-decoration: underline;
     list-style: none;
 }
@@ -198,13 +259,10 @@ section {
   /* font-size: 15px; */
   font-size: 1.40vw;
 }
-
 /* CONTACT ME STYLES END */
-
 /* MAIN BODY STYLES END */
 
 /* UTILITIES */
-
 .text-left {
     text-align: left;
 }
@@ -235,21 +293,13 @@ section {
       header nav ul li a {
         font-size: 20px;
       }
-    
-      footer h2, footer div {
-        text-align: center;
-        width: 100%;
-      }
 
-      .hero-cta, .hero-form {
+      .hero {
           width: 100%;
       }
 
-      .hero-cta {
+      .hero h3 {
           text-align: center;
-      }
-      .section-title {
-        width: 80%;
       }
   }
   
@@ -258,75 +308,14 @@ section {
     section {
       padding: 30px 15px;
     }
-    .step h3 {
-      flex: 1 100%;
-      text-align: center;
-    }
-    
-    .step-info {
-        flex: 2 100%;
-        text-align: center;
-        justify-content: center;
-    }
-    
-    .step-img {
-      flex: 0 32%;
-      margin-right: 0;
-      margin-top: 15px;
-      margin-bottom: 15px;
-    }
-    
-    .step-text {
-      flex: 100%;  
-    }
-
-    .service-grid-container {
-        grid-template-columns: 1fr 1fr;
-    }
-
-    .service-grid-item.basic {
-        grid-column: 1;
-    }
-
-    .service-grid-item.both {
-        grid-column: 1 / -1;
-    }
-
-    .service-grid-item.cancel {
-        transform: none;
-        writing-mode: unset;
-        grid-column: 1 / -1;
-        grid-row: -1;
-    }
   }
   
   /* MEDIA QUERY FOR MOBILE PHONES AND SMALLER */
   @media screen and (max-width: 575px) {
-    .hero-form button {
-        width: 100%;
-      }
     
-      .section-title {
-        width: 95%;
-      }
-    
-      .intro p {
-        width: 100%;
-      }
-    
-      .trainer {
-        flex: 0 100%;
-      }
-    
-      .contact-info {
+      .contact-box > * {
         text-align: center;
-      }
-    
-      .contact-info > * {
         flex: 0 100%;
       }
 
-      .contact-form {
-        order: 3;
-      }
   }
